# PromptPilot

./: .gitignore  LICENSE  PromptPilot-1click-Debug.ps1  PromptPilot-1click.ps1  README.md  package.json
.github/workflows/: windows-msi.yml
policies/: policy.rego
scripts/: audio_datasets.py  build-windows.ps1  whisper_finetune.py
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: admin.rs  history.rs  llm.rs  logs.rs  main.rs  policy.rs  rag.rs  security.rs  ui.rs  users.rs
src/assets/: brand.css  brand.html
