[package]
name = "promptpilot"
version = "1.2.0"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = ["dialog", "shell"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5.0"
yaml-rust = "0.4"
ed25519-dalek = "2.1.1"
rand = "0.8"
sha2 = "0.10"
nanoid = "0.4"
xchacha20poly1305 = { version = "0.10", features = ["std"] }
base64 = "0.22"

# AI / RAG
reqwest = { version = "0.11", features = ["json", "blocking"] }

[build-dependencies]
tauri-build = "2.0.0"
